# mosaicos

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: Canvas.svelte  Inspector.svelte  LeftPanel.svelte  LibraryStrip.svelte  Slider.svelte  StatusBar.svelte  analyze.worker.ts  color.ts  engine.svelte.ts  io.ts  mosaic.svelte.ts  persist.ts  studio.svelte.ts
