[package]
name = "mosaicos"
version = "0.1.0"
description = "Mosaicos — a macOS photo-mosaic studio."
edition = "2021"
rust-version = "1.77"

[lib]
name = "mosaicos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
